Duplicating after setting a rigid body world crashes Blender #58993

Closed
opened 2018-12-08 02:36:11 +01:00 by Ilari Männistö · 3 comments

System Information
Operating system: Windows 10 Home
Graphics card: Nvidia Geforce GTX 1080

Blender Version
Date: 2018-12-07 13:17
Hash: c1f6ecdfab
Branch: blender2.8

Duplicating the default cube or any other mesh after setting a rigid body world collection crashes Blender.

Open Blender default scene.
Go to Scene tab in the Properties panel.
Click on "Add Rigid Body World".
In its settings, set the (currently only) collection to be the Collection.
Click on the cube in the viewport and press Shift + D. Blender crashes.

I also tried these variants:
1.
Open Blender, create a new collection and add a Cube in it.
Set the rigid body world collection to be either one of the collections that exist in the scene currently.
Try to duplicate either one of the cubes.
Blender crashes.

  1. Open Blender, create a couple of cubes and set them as rigid bodies in the Physics tab.
    Now the scene tab has "RigidBodyWorld" as the Collection. You can duplicate the cubes without problems. But, if you now go and change the rigid body world collection to be "Collection", then duplicating will crash Blender.

So basically it just seems that having any other than "RigidBodyWorld" as the collection for rigid body world crashes Blender.
rigidbodyworldbug.PNG

**System Information** Operating system: Windows 10 Home Graphics card: Nvidia Geforce GTX 1080 **Blender Version** Date: 2018-12-07 13:17 Hash: c1f6ecdfabf Branch: blender2.8 Duplicating the default cube or any other mesh after setting a rigid body world collection crashes Blender. Open Blender default scene. Go to Scene tab in the Properties panel. Click on "Add Rigid Body World". In its settings, set the (currently only) collection to be the Collection. Click on the cube in the viewport and press Shift + D. Blender crashes. I also tried these variants: 1. Open Blender, create a new collection and add a Cube in it. Set the rigid body world collection to be either one of the collections that exist in the scene currently. Try to duplicate either one of the cubes. Blender crashes. 2. Open Blender, create a couple of cubes and set them as rigid bodies in the Physics tab. Now the scene tab has "RigidBodyWorld" as the Collection. You can duplicate the cubes without problems. But, if you now go and change the rigid body world collection to be "Collection", then duplicating will crash Blender. So basically it just seems that having any other than "RigidBodyWorld" as the collection for rigid body world crashes Blender. ![rigidbodyworldbug.PNG](https://archive.blender.org/developer/F5877811/rigidbodyworldbug.PNG)

Added subscriber: @Lattispottis

Added subscriber: @Lattispottis

This issue was referenced by 073a011f91

This issue was referenced by 073a011f91a52cf1648b2d76606f0f2fff412098
Bastien Montagne self-assigned this 2018-12-10 14:10:33 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58993
No description provided.